removed some junk. now to refactor to make sure it is not gross on mobile.'

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@ body {
     color: #111;
     font-family: 'EB Garamond';
     margin: 10ch auto;
+    padding: 1ch;
     max-width: 60ch;
-    line-height: 1.5;
     font-size: 18px;
+    line-height: 1.5;
 }
 
 a {
@@ -17,7 +18,7 @@ a:hover {
     text-decoration: underline;
 }
 
-/* index.html specific */
+/* index.html */
 span {
     display: block;
     text-align: right;
@@ -51,7 +52,7 @@ span {
     text-transform: uppercase;
 }
 
-.im-fell-english {
+#main-title, #sonnet-title {
     font-family: "IM Fell English";
 }
 
